# 3D-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Primitives.hpp  README.md  build.ps1  build.sh  vcpkg.json
entities/: CMakeLists.txt
entities/include/: AmbientLight.hpp  Camera.hpp  DirectionalLight.hpp  MeshData.hpp  Object.hpp  Renderer.hpp  Shader.hpp  Transform.hpp  TriangulatedObject.hpp  Window.hpp  World.hpp
entities/src/: AmbientLight.cpp  Camera.cpp  DirectionalLight.cpp  Object.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  TriangulatedObject.cpp  Window.cpp  World.cpp
file-import/: CMakeLists.txt  ImportObj.cpp
file-import/include/: ImportMesh.hpp
file-import/src/: ImportMesh.cpp
project-exceptions/: CMakeLists.txt
project-exceptions/include/: GlCheck.hpp
project-exceptions/src/: ClCheck.cpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app-context/: ModelContext.hpp  UIContext.hpp
src/app/include/: App.hpp
src/app/src/: App.cpp
src/edit/: Action.hpp  ActionTraits.hpp
src/edit/commands/: Commands.cpp  Commands.hpp  ConsoleCommandTraits.hpp
src/edit/messages/: MessageTraits.hpp
src/edit/requests/: Requests.hpp
src/edit/validators/: Validators.cpp  Validators.hpp
src/entities/: CMakeLists.txt
src/entities/include/: Camera.hpp  MeshData.hpp  Renderer.hpp  Shader.hpp  Token.hpp  TriangulatedObject.hpp  Window.hpp  World.hpp
src/entities/src/: Camera.cpp  DirectionalLight.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  TriangulatedObject.cpp  Window.cpp  World.cpp
src/entities/src/light/: AmbientLight.cpp
src/file-import/: CMakeLists.txt
src/file-import/include/: Importer.hpp
src/file-import/src/: Importer.cpp
src/project-exceptions/: CMakeLists.txt
src/project-exceptions/include/: GlCheck.hpp
src/project-exceptions/src/: ClCheck.cpp
src/user-dialogue/: CMakeLists.txt
src/user-dialogue/include/: Dialogue.hpp  Parser.hpp
src/user-dialogue/src/: Dialogue.cpp  Parser.cpp
